@@ -2,6 +2,7 @@
 # Temporary version, should be removed when standard Plone has this
 # version or a later one.
 AccessControl = 3.0.9
+collective.js.jqueryui = 1.10.4
 Jinja2 = 2.8
 Products.GenericSetup = 1.8.2
 Products.PloneHotfix20150910 = 1.1
@@ -14,7 +15,6 @@ zc.recipe.egg = 2.0.3
 # Rest.
 collective.emaillogin4 = 1.3
 collective.embedly = 2.4
-collective.js.jqueryui = 1.9.2.0
 collective.mailchimp = 2.0.2
 collective.recaptcha = 1.1.5
 collective.recipe.supervisor = 0.19
